--- a/src/posts/2018/10/anatomy-of-a-supreme-bot-part-3.mdx
+++ b/src/posts/2018/10/anatomy-of-a-supreme-bot-part-3.mdx
@@ -31,14 +31,8 @@ keywords: supreme,bots,surpeme bots,javascript,reverse engineering
     from part two, cookie-sub contains a JSON representation of the final size-id and the
     quantity.
 </p>
-<figure className="kg-card kg-image-card kg-card-hascaption">
-![](/posts/anatomy-of-a-supreme-bot-part-3/1.png)
-    <figcaption>The cookie-sub passed to checkout.json</figcaption>
-</figure>
-<figure className="kg-card kg-image-card kg-card-hascaption">
-![](/posts/anatomy-of-a-supreme-bot-part-3/2-1.png)
-    <figcaption>The JSON representation after decoding</figcaption>
-</figure>
+![The cookie-sub passed to checkout.json](/posts/anatomy-of-a-supreme-bot-part-3/1.png)
+![The JSON representation after decoding](/posts/anatomy-of-a-supreme-bot-part-3/2-1.png)
 <p>
     Something interesting is that adding an item to cart is not necessary. The cookie-sub is
     all the information the checkout.json endpoint needs to cop your items!
@@ -48,23 +42,15 @@ keywords: supreme,bots,surpeme bots,javascript,reverse engineering
     mobile_stock.
 </p>
 <p>To answer this, let’s look at mobile_stock.</p>
-<figure className="kg-card kg-image-card">
 ![](/posts/anatomy-of-a-supreme-bot-part-3/3.gif)
-</figure>
 <h1 id="to-mobile_stock-json-we-go-">To mobile_stock.json We Go!</h1>
-<figure className="kg-card kg-image-card kg-card-hascaption">
-![](/posts/anatomy-of-a-supreme-bot-part-3/4-1.png)
-    <figcaption>mobile_stock.json on Oct 25 2018</figcaption>
-</figure>
+![mobile_stock.json on Oct 25 2018](/posts/anatomy-of-a-supreme-bot-part-3/4-1.png)
 <p>
     My first observation was that the items inside the “new” category are incremented by 1.
     This is major because this means we may be able to bruteforce items by trying a higher ID
     than the current highest.
 </p>
-<figure className="kg-card kg-image-card kg-card-hascaption">
-![](/posts/anatomy-of-a-supreme-bot-part-3/5-1.png)
-    <figcaption>JSON of an item</figcaption>
-</figure>
+![JSON of an item](/posts/anatomy-of-a-supreme-bot-part-3/5-1.png)
 <p>
     Looking at the item’s JSON I also notice that the size IDs are incremented by one. This is
     looking super EPIC. I won’t take full credit for the next discovery. I was pretty close,
@@ -73,10 +59,7 @@ keywords: supreme,bots,surpeme bots,javascript,reverse engineering
 </p>
 <h1 id="out-of-stock">Out of Stock</h1>
 <p>What happens when we checkout an item that’s out of stock? Only one way to find out.</p>
-<figure className="kg-card kg-image-card kg-card-hascaption">
-![](/posts/anatomy-of-a-supreme-bot-part-3/6-1.png)
-    <figcaption>Trying to checkout a sold out item.</figcaption>
-</figure>
+![Trying to checkout a sold out item.](/posts/anatomy-of-a-supreme-bot-part-3/6-1.png)
 <p>
     Hm! Turns out that Supreme is pretty generous with the information given when an item has
     the outOfStock status. They give us the, item name, item color, item size, and more. Turns
