--- a/src/posts/2019/02/tackling-javascript-client-side-security-pt-1.mdx
+++ b/src/posts/2019/02/tackling-javascript-client-side-security-pt-1.mdx
@@ -9,17 +9,16 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
 
 <OldPost />
 
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/1-1.png)
-</figure>
+![](/posts/tackling-javascript-client-side-security-part-1/1-1.png)
+
 <p>
     Jscrambler, a leader in JavaScript Client-side security makes claims to “Bullet-proof your
     Web Application in 2 minutes” but what have they done to make these claims? And does it
     really bulletproof your application?
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/2-2.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/2-2.png)
+
 <p>
     Jscrambler employs various techniques to both obfuscate the code and prevent real-time
     debugging/tampering. A list of the techniques is provided by the Jscrambler product page
@@ -31,30 +30,29 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
     for us, we’re able to sign up and demo their protection using a game they provide. Even
     better, they provide the unprotected version as well! This is useful for comparison.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/3-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/3-1.png)
+
 <p>
     The Playground App is more than enough for us to pick apart how Jscrambler works and how
     to reverse its effects. Clicking on View App brings you to the page where you’re able to
     fine-tune the protection to your liking.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/4-2.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/4-2.png)
+
 <p>
     You’re then able to protect the app and run it. Pressing the Run Source and Run Protected
     buttons will create an iframe with the running application. We’re then able to get the
     source though the Chrome Dev Tools
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/5-2.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/5-2.png)
+
 <h1 id="side-by-side-comparison">Side by Side Comparison</h1>
-<figure className="kg-card kg-image-card kg-card-hascaption">
-    ![](/posts/tackling-javascript-client-side-security-part-1/6-2.png)
-    <figcaption>Original code on the left, Jscrambler protected code on right</figcaption>
-</figure>
+
+![Original code on the left, Jscrambler protected code on right](/posts/tackling-javascript-client-side-security-part-1/6-2.png)
+
 <p>
     Looking at the obfuscated code vs the original code a few things stood out to me. The
     first being the difference in lines of code. The protected application sits at 907 lines
@@ -62,24 +60,24 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
     from somewhere. The second thing I noticed was all of the obfuscated function calls and
     string references. A quick glance at their docs brings me to what they call [String Concealing](https://docs.jscrambler.com/code-integrity/documentation/transformations/string-concealing)
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/7-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/7-1.png)
+
 <p>
     Our protected code is littered with calls to the decode routines so I had a bright idea to
     isolate the decode functions by copying them to a different file.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/8-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/8-1.png)
+
 <p>
     Jumping to the function using ctrl + clicking on one of them brings me to the top of the
     file where many similar functions are defined. After multiple scrolls I notice our code
     starts but is wrapped around what seems to be an IIFE
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/9-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/9-1.png)
+
 <p>
     Copying all the functions above this IIFE into another file and removing them from the
     protected code brings our lines of code from 907 down to 629. This means the majority of
@@ -95,28 +93,28 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
     To do this, I grabbed one of the calls to the decode function and console.log it in my
     file with all the decode functions.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/10-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/10-1.png)
+
 <p>Now, lets call node testing.js</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/11-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/11-1.png)
+
 <p>
     a3U is not defined, hmm. I check back to the protected code and realize a3U is pointing to
     a global variable named A1aa
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/12-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/12-1.png)
+
 <p>So I change a3U in the test to A1aa</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/13-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/13-1.png)
+
 <p>And try running it again</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/14-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/14-1.png)
+
 <h1 id="it-returns-toint-">It Returns toInt!</h1>
 <p>
     At this point I was very excited. This means I was able to isolate these functions and use
@@ -127,13 +125,13 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
     I even went a step further and used a for loop to try printing out any other strings we
     can get.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/15-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/15-1.png)
+
 <p>And now to run it.</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/16-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/16-1.png)
+
 <p>Awesome! We get a bunch of strings and function names.</p>
 <p>
     Only one problem. I don’t really want to sit here and replace each occurrence by hand.
@@ -153,9 +151,9 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
 <p>
     [Esprima](https://github.com/jquery/esprima) is a popular parser and is what we’ll be using to do this.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/17-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/17-1.png)
+
 <p>
     Esprima has an example of removing console calls from a program using their tool. I will
     be using this as the base to find all the calls to the decode functions and replace them.
@@ -169,49 +167,48 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
     Pasting one of these functions in ASTExplorer lets us know we’re dealing with an
     ExpressionStatement
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/18-1.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/18-1.png)
+
 <p>What we care about is K3U or the property identifier</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/19.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/19.png)
+
 <p>
     We know each decode function belongs to A1aa so we’ll use that to extract the function
     names.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/20.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/20.png)
+
 <p>Using this code we’re able to print the decode functions out and take a look.</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/21.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/21.png)
+
 <p>Great, but we only care about the function name.</p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/22.png)
-</figure>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/23.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/22.png)
+
+
+![](/posts/tackling-javascript-client-side-security-part-1/23.png)
+
 <p>
     Cool! We got the function names now we need to replace each call to them in the code with
     their returned value. I return to ASTExplorer but this time inspect a line where one of
     these decode functions is called.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/24.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/24.png)
+
 <p>
     The call is defined as a CallExpression. Inside the CallExpression contains other
     information such as the arguments passed, callee, and types.
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/25.png)
-</figure>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/26.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/25.png)
+
+![](/posts/tackling-javascript-client-side-security-part-1/26.png)
+
 <p>
     Using ASTExplorer we’re able to build another predicate which checks if the function is a
     CallExpression and its callee’s property name is one of our decode functions. Now we just
@@ -222,9 +219,9 @@ keywords: jscrambler,reverse engineering,javascript,deobfuscation
     Remember our obfuscated code comparison from above? Well this is how the comparison looks
     after running our script!
 </p>
-<figure className="kg-card kg-image-card">
-    ![](/posts/tackling-javascript-client-side-security-part-1/27.png)
-</figure>
+
+![](/posts/tackling-javascript-client-side-security-part-1/27.png)
+
 <p>
     Suddenly a lot more readable! Some function names aren’t recoverable because they aren’t
     encoded but instead changed into some random garbage. Now that the code is in a more
