refactor: different heading for paragraph

--- a/src/posts/2023/08/evading-anti-debugging-techniques.mdx
+++ b/src/posts/2023/08/evading-anti-debugging-techniques.mdx
@@ -32,7 +32,7 @@ unavailable.
 
 For complex scripts like the anti-bot employed by Supreme, this approach was simply not an option.
 
-## The Ez Approach
+## Trying an Extension
 
 Greasyfork scripts such as Anti Anti-debugger attempt to bypass these debugger traps by overriding the caller's 
 function body, removing the debugger statements, and `eval` the new function. While this approach seemed promising, 
