--- a/app/posts/2023/01/devirtualizing-nike-vm/devirtualizing-nike-vm-2.mdx
+++ b/app/posts/2023/01/devirtualizing-nike-vm/devirtualizing-nike-vm-2.mdx
@@ -413,7 +413,7 @@ fs.writeFileSync("./output/unscanned" + ".json", JSON.stringify(intervals));
 
 # Interpreting Disassembly
 
-```sh
+```bash
 $ npm start
 					
 > kasada-disassembler@1.0.0 start
