feat: new site design

--- a/app/posts/2023/08/evading-anti-debugging-techniques.mdx
+++ b/app/posts/2023/08/evading-anti-debugging-techniques.mdx
@@ -7,6 +7,8 @@ excerpt: Debuggers serve as invaluable tools that empower developers to halt cod
 keywords: supreme,obfuscation,reverse engineering,javascript,firefox,debugger,anti-debugging
 ---
 
+# Introduction
+
 Debuggers serve as invaluable tools that empower developers to halt code execution and thoroughly 
 analyze its behavior at any given moment. By utilizing a debugger, developers can efficiently 
 identify and resolve issues within their code, making it an indispensable part of their toolkit.
