--- a/app/posts/2025/06/forging-passkeys.mdx
+++ b/app/posts/2025/06/forging-passkeys.mdx
@@ -2,7 +2,7 @@
 slug: forging-passkeys
 date: Jun 20 2025
 author: vmfunc
-name: Breaking WebAuthn, FIDO2, and Forging Passkeys
+name: Forging Passkeys: Exploring the FIDO2 / WebAuthn Attack Surface
 excerpt: Passwords are dying and passkeys are taking over. In this post we tear apart WebAuthn and build our own software FIDO2 authenticator from scratch.
 keywords: webauthn,passkeys,fido2,reverse-engineering,security
 ---
