--- a/app/posts/2025/06/reversing-botid.mdx
+++ b/app/posts/2025/06/reversing-botid.mdx
@@ -17,7 +17,7 @@ On one hand, anti-bots are important. They help stop credential stuffing attacks
 
 On the other hand, I kind of hate them.
 
-Most anti-bots rely on aggressive browser fingerprinting[^fingerprint-js], collecting a plathora of device signals[^bot-test], and quietly deciding whether you're “human enough”. They often break for those using Linux, smaller browsers like Ladybird[^ladybird-turnstile], or even privacy-focused ones like Brave. They push the web toward a monoculture where only certain OS/browser combos are considered legitimate.
+Most anti-bots rely on aggressive browser fingerprinting[^fingerprint-js], collecting a plethora of device signals[^bot-test], and quietly deciding whether you're “human enough”. They often break for those using Linux, smaller browsers like Ladybird[^ladybird-turnstile], or even privacy-focused ones like Brave. They push the web toward a monoculture where only certain OS/browser combos are considered legitimate.
 
 [^fingerprint-js]: https://fingerprintjs.github.io/fingerprintjs/
 [^bot-test]: https://bot.incolumitas.com/
