--- a/app/posts/2025/06/reversing-botid.mdx
+++ b/app/posts/2025/06/reversing-botid.mdx
@@ -25,7 +25,7 @@ Most anti-bots rely on aggressive browser fingerprinting[^fingerprint-js], colle
 
 So I sit in this weird middle ground. I get why they exist. I get why companies use them. But I also worry about what they're doing to the open web.
 
-This blog post doesn’t present anything particularly new. In fact, much of it revisits topics covered before on this site. My goal here is simply to invite discussion and hear different perspectives on the matter.
+This blog post doesn’t present anything particularly groundbreaking. In fact, much of it revisits topics covered before on this site. My goal here is simply to invite discussion and hear different perspectives on the matter.
 
 ## Introduction
 
