fix(post/reverse-engineering-browser): vid thumbnails

--- a/app/posts/2025/10/reverse-engineering-browser.mdx
+++ b/app/posts/2025/10/reverse-engineering-browser.mdx
@@ -15,7 +15,7 @@ If you're just curious about what it looks like and don't care about how it work
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/showcase-without-audio.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/showcase-without-audio.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 </figure>
@@ -134,7 +134,7 @@ The result looked as follows:
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/initial-hooks.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/initial-hooks.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 <figcaption>Functions calls appearing in our sidebar after hooks have been fired</figcaption>
@@ -146,7 +146,7 @@ The site was pulling a decent amount of telemetry. Canvas calls (like `toDataURL
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/tiktok-overview.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/tiktok-overview.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 <figcaption>Canvas and other various hooks firing on Tiktok.com's homepage</figcaption>
@@ -512,7 +512,7 @@ Drumroll, please!
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/to-data-custom-browser.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/to-data-custom-browser.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 <figcaption>The Canvas toDataURL operation was caught by our custom build and sent through CDP!</figcaption>
@@ -535,7 +535,7 @@ I also added a section that extracts and displays recovered string literals from
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/obfuscation.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/obfuscation.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 <figcaption>Obfuscation tab running against a pretend CTF challenge</figcaption>
@@ -547,7 +547,7 @@ Hooking and reading is fun, but sometimes you want to *change* behavior. You now
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/overrides.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/overrides.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 <figcaption>Overriding navigator.userAgent and navigator.vendor from the Overrides tab</figcaption>
@@ -561,7 +561,7 @@ Of course, each collector still needs to be reverse-engineered beforehand. Maybe
 
 <figure>
 <video width="320" height="240" controls>
-  <source src="/posts/reverse-engineering-browser/fingerprintjs-tab.mp4" type="video/mp4" />
+  <source src="/posts/reverse-engineering-browser/fingerprintjs-tab.mp4#t=0.001" type="video/mp4" />
   Your browser does not support the video tag. 
 </video>
 <figcaption>FingerprintJS tab that shows the decoded payload in a nice table</figcaption>
