--- a/app/posts/2025/10/reverse-engineering-browser.mdx
+++ b/app/posts/2025/10/reverse-engineering-browser.mdx
@@ -77,6 +77,8 @@ In hindsight, of course that makes sense. Still, it sucked. I wasn’t ready to 
 
 I knew if I wanted to get this done, I would have to go down a layer.
 
+> **Editor's Note**: Some readers have kindly pointed out to me that this *is* actually possible to accomplish from an extension. However, the custom browser approach still has benefits explained later in the post :-)
+
 ## Chrome Devtools Protocol
 
 The Chrome DevTools Protocol (CDP) is the low-level bridge for instrumenting, inspecting, and debugging Chromium-based browsers. It’s what automation tools like Selenium and Playwright use under the hood. CDP exposes a large set of methods and events split across domains. The docs publish a convenient, [comprehensive list](https://chromedevtools.github.io/devtools-protocol/) of them.    
